testData/inspections/linkResolve/fileDoesntExist.adoc
link:<error descr="File doesn't resolve">notfound.adoc</error>[]

<<<error descr="Anchor doesn't resolve">doesntexist</error>>>

== lowercasenoblanks

<<<error descr="Anchor doesn't resolve">lowercasenoblanks</error>>>

== Headline

<<Headline>>

<<_headline>>

[id="hdlid"]
== Headline with ID

<<hdlid>>

[#hdlid2]
== Headline with ID

<<hdlid2>>

// no error, as modules is unknown
xref:component:module:test.adoc[]

// no error, as link starts with "/" as this is probably an absolute link at the site
link:/root[]

// no error, as resolves to URL
:myurl: http://any.org
link:{myurl}[]

// no error, as attribute doesn't resolve
link:{noattr}[]
